# ppk-generator

./: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: build.yml
e2e/: ppk-flow.spec.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: contributions.rs  generations.rs  members.rs  mod.rs  organizations.rs
src-tauri/src/db/: migrations.rs  pool.rs
src-tauri/src/generator/: csv.rs  mod.rs  xml.rs  zip.rs
src-tauri/src/models/: contribution.rs  generation.rs  member.rs  mod.rs  organization.rs
src-tauri/src/validation/: mod.rs  nip.rs  pesel.rs  regon.rs
src-tauri/tests/: generator_test.rs
src/components/: ConfirmDialog.svelte  GenerationSummary.svelte  Layout.svelte  MoneyInput.svelte  OrgSelector.svelte  PeselInput.svelte  SaveIndicator.svelte  Toast.svelte
src/lib/: api.ts  invoke.ts  stores.svelte.ts  types.ts  utils.ts  validation.ts
src/mock/: mock-invoke.ts  mock-store.ts
src/mock/mock-handlers/: contributions.ts  generations.ts  members.ts  organizations.ts
src/views/: ContributionEditor.svelte  GenerationLog.svelte  MemberForm.svelte  MemberList.svelte  OrganizationForm.svelte
