[package]
name = "ppk-gen"
version = "0.1.0"
description = "PPK Generator - Pracownicze Plany Kapitałowe"
authors = ["Piotr Korzuszek"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rust_decimal = { version = "1.36", features = ["serde-str"] }
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
uuid = { version = "1.10", features = ["v4"] }
thiserror = "2"
